# kColors

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  kColors.cpp
